--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS01;Initial Catalog=BaseFinanceiro;Integrated Security=False;User ID=sa;Password=fdas*2018;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False"
+    //"DefaultConnection": "Data Source=.\\SQLEXPRESS01;Initial Catalog=FINANCEIRO_2023;Integrated Security=True" // Eviatar
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
