--- a/Infra/Infra.csproj
+++ b/Infra/Infra.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Configuracao\" />
+    <Folder Include="Context\" />
   </ItemGroup>
 
   <ItemGroup>
